fix: allow card to grow to width of container
In the Notifications component the container width is already fixed so
as to keep the card from growing too wide.

--- a/assets/css/_card.scss
+++ b/assets/css/_card.scss
@@ -1,7 +1,7 @@
 .m-card {
   display: flex;
 
-  max-width: Min(23.125rem, 100%);
+  width: 100%;
   box-sizing: border-box;
 
   background-color: $color-kiwi-50;
